added PromptMoveDialogue function, and divided files into game logic and game utility

--- a/Connect4/Project.vcxproj
+++ b/Connect4/Project.vcxproj
@@ -11,10 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <MASM Include="Source Files\GameLogic.asm" />
     <MASM Include="Source Files\GameUtility.asm" />
     <MASM Include="Source Files\Main.asm" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Source Files\GameLogic.inc" />
     <None Include="Source Files\GameUtility.inc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
